# ctest-py

./: README.md  noxfile.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-wheels.yml  release.yml  tests.yml
src/: CMakeLists.txt
src/c/: CMakeLists.txt
src/c/src/: blockcachevfs.c  blockcachevfsd.c  blockcachevfstest.c  extension.c  shell.c
src/ctest_py/: __init__.py  _build_cffi.py  plugin.py
